Fixes title height on Firefox

--- a/service/surf/apps/materials/static/materials/widget.css
+++ b/service/surf/apps/materials/static/materials/widget.css
@@ -146,7 +146,7 @@
  }
 
 .truncate2 {
-    height: 50px;
+    height: 64px;
     line-height: 24px;
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -156,7 +156,6 @@
     word-break: break-word;
 }
 .truncate3 {
-    height: 64px;
     line-height: 24px;
     display: -webkit-box;
     -webkit-line-clamp: 3;
